--- a/user.cmd.api/pom.xml
+++ b/user.cmd.api/pom.xml
@@ -14,7 +14,7 @@
 	<name>user.cmd.api</name>
 	<description>User Command API Project</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,11 +38,18 @@
 			<version>4.5.15</version>
 		</dependency>
 
+
 		<dependency>
 			<groupId>com.springbank</groupId>
 			<artifactId>user.core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 
 
 		<dependency>
@@ -50,11 +57,26 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security</groupId>-->
+<!--			<artifactId>spring-security-config</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--			<version>5.4.2</version>-->
+<!--		</dependency>-->
+
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 
